# Raw-Dumper

./: .gitignore  README.md  TODO.txt  WB-algorithm-idea.txt  build.gradle  camera-configs.txt  privacy_policy.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/release/: output.json
app/src/androidTest/java/com/fkeglevich/rawdumper/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/fkeglevich/rawdumper/dng2/: DngWriter2Test.java
app/src/androidTest/java/com/fkeglevich/rawdumper/dngsdk/: DngWriter2Test.java
app/src/androidTest/java/com/fkeglevich/rawdumper/su/: ShellFactoryTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: DNG_SDK_LICENSE.txt  emulator.json  supported_devices.json  t00j.json  t00x.json  xt890.json  z008d.json  z00ad.json  z00x.json  z00x_zoom.json
app/src/main/assets/devices/: emulator.json  supported_devices.json  t00x.json  xt890.json  z00x.json  z00x_zoom.json
app/src/main/assets/shaders/: filter_preview.fsh.glsl  focus_peak_frag.glsl  preview_frag.glsl  preview_vertex.glsl  reveal_preview_frag.glsl  take_picture_frag.glsl
app/src/main/cpp/: DngNegativeJni.cpp  DngWriterJni.cpp  ExifWriterJni.cpp  TiffWriterJni.cpp  WhiteBalanceJni.cpp
app/src/main/cpp/dng_sdk/: CMakeLists.txt
app/src/main/cpp/dng_sdk/source/: dng_image_writer.cpp  dng_image_writer.h  dng_safe_arithmetic.h
app/src/main/cpp/hm/: dir.h
app/src/main/cpp/tiff/libtiff/: tif_config.h  tif_dirinfo.c  tif_dirinfo.c.orig  tiff.h  tiff.h.orig  tiffconf.h
app/src/main/java/com/asus/camera/extensions/: AsusCameraExtension.java
app/src/main/java/com/fkeglevich/rawdumper/: MainActivity.java  MainActivity4.java  MainActivity5.java
app/src/main/java/com/fkeglevich/rawdumper/activity/: ActivityReference.java  KeyEventData.java  ModularActivity.java
app/src/main/java/com/fkeglevich/rawdumper/async/: Locked.java
app/src/main/java/com/fkeglevich/rawdumper/camera/: AvailableCaptureSizes.java  CameraSwitcher.java  CaptureConfig.java  CaptureSize.java  CaptureSizes.java  IAsyncCamOpenCallback.java  ICaptureConfigCallback.java  ImageFormat.java  ModeInfo.java  ParameterFormatter.java  TurboCamera.java
app/src/main/java/com/fkeglevich/rawdumper/debug/: DebugFlag.java  DebugFlags.java  PerfInfo.java
app/src/main/java/com/fkeglevich/rawdumper/dng/: ADngImageWriter.java  DngDefaults.java  DngImageWriter.java  DngVersion.java  DngWriter.java  ExifWriter.java
app/src/main/java/com/fkeglevich/rawdumper/dng1/: DngWriter.java  DngWriterOptions.java  I3av4ToDngConverter.java
app/src/main/java/com/fkeglevich/rawdumper/dng2/: ADngImageWriter.java  CalibrationIlluminant.java  DataFormatter.java  DngDefaults.java  DngImageWriter.java  DngWriter.java  DngWriter2.java  ExifInfo.java  Flash.java  ImageColorInfo.java  ImageDefaults.java  ImageInfo.java
app/src/main/java/com/fkeglevich/rawdumper/exif/: DngExifTagWriter.java  ExifTag.java  ExifTagWriter.java  TiffExifTagWriter.java
app/src/main/java/com/fkeglevich/rawdumper/extension/: DummyCameraProxy.java  ICameraExtension.java  IntelCameraExtensionLoader.java  IntelCameraProxy.java  IntelParameters.java
app/src/main/java/com/fkeglevich/rawdumper/gl/: BufferType.java  BufferUsage.java  ComputeProgram.java  ComputeShader.java  Extension.java  GLBuffer.java  GLService.java  Program.java  ProgramFactory.java  Shader.java  ShaderType.java  Texture.java  TextureFactory.java
app/src/main/java/com/fkeglevich/rawdumper/i3av4/: I3av4ToDngConverter.java
app/src/main/java/com/fkeglevich/rawdumper/io/: Directories.java
app/src/main/java/com/fkeglevich/rawdumper/log/: LogFile.java
app/src/main/java/com/fkeglevich/rawdumper/permission/: IPermissionResultListener.java  MandatoryPermissionAwareActivity.java  MandatoryPermissionManager.java  MandatoryRootAwareActivity.java  MandatoryRootManager.java
app/src/main/java/com/fkeglevich/rawdumper/raw/: BayerPattern.java  ImageOrientation.java  RawUtil.java  Utils.java
app/src/main/java/com/fkeglevich/rawdumper/su/: MainSUShell.java  ShellCreationThread.java  ShellFactory.java  ShellManager.java
app/src/main/java/com/fkeglevich/rawdumper/test/: Test.java  TestActivity.java  TestSelector.java
app/src/main/java/com/fkeglevich/rawdumper/tiff/: ExifTag.java  ExifTagWriter.java  TagFormatter.java  TiffTag.java  TiffWriter.java
app/src/main/java/com/fkeglevich/rawdumper/ui/: CameraPreviewTexture.java  ISOInterface.java  ModesInterface.java  PausingTextureView.java  RoundMenu.java  ShutterSpeedInterface.java  TextureListener.java  TextureViewSourceAdapter.java  TouchFocusView.java  UiUtil.java  UiUtils.java  ValueButton.java
app/src/main/java/com/fkeglevich/rawdumper/util/: AppPackageUtil.java  Assert.java  Assertion.java  AssetUtil.java  ByteArrayUtil.java  ColorUtil.java  DataSize.java  DateUtil.java  MD5.java  MathUtil.java  MinDelay.java  Mutable.java  NameNotFoundFromItselfException.java  Nothing.java  Nullable.java  PackageUtil.java  PermissionUtil.java  RawUtil.java  ResourceUtil.java  StringUtil.java  Temperature.java  ThreadUtil.java  TimeLogger.java  YuvUtil.java
app/src/main/java/com/intel/camera/extensions/: IntelCamera.java
app/src/main/res/drawable/: controls_divider.xml  extra_background.xml  focus_divider.xml  round_button.xml  round_button_default.xml  round_button_focused.xml  round_button_pressed.xml  round_button_toggled.xml  round_menu_background.xml  seek_bar_background.xml
app/src/main/res/drawable-hdpi/: round_button_default_transparent.xml  round_button_transparent.xml
app/src/main/res/layout/: about_view.xml  activity_main.xml  ev_value_chooser.xml  flash_control.xml  focus_mode_chooser.xml  iso_value_chooser.xml  main_control_buttons.xml  modes_layout.xml  shutter_speed_chooser.xml  white_balance_chooser.xml
app/src/main/res/raw/: supported_devices.json  xt890.json  z008d.json  z00ad.json
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-pt/: strings.xml
app/src/test/java/com/fkeglevich/rawdumper/: ExampleUnitTest.java
(+594 files in other folders)
